# sudoku-generator-C-

./: CMakeLists.txt  README.md  main.cpp  sudokuboard.cpp  sudokuboard.h
DigHoleAlgorithm/: digging.cpp  digging.h  digging_sequences.cpp  digging_sequences.h
LasVegasAlgorithm/: las_vegas_algorithm.cpp  las_vegas_algorithm.h
Solvers/: backtracking_solver.cpp  backtracking_solver.h
Testing/: backtracking_solver_test.cpp  backtracking_solver_test.h
